--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,11 @@ body{
 }
 .container__h{
 	width: 100%;
-	background-color: #EFEDED; 
+	background-color: #EFEDED;
+}
+.header__nav li a{
+	text-decoration: none;
+	color: #575756 ;
 }
 .header:hover{
 	background-color: white;
@@ -50,9 +54,12 @@ body{
 	margin: auto;	
 }
 .contenedor__image p{
-	font-size: 3rem;
-	color: white;
+	font-size: 2.5rem;
+	font-weight: 600;
+	margin-top: 19px;
+	color: #575756;
 	position: absolute;
+	text-align: center;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -60,6 +67,7 @@ body{
 @media all and (min-width: 768px){
 	.hero__image img{
 		width: 100%;
+	}
 }
 .imagen__card {
 	max-width: 500px;
@@ -80,6 +88,7 @@ body{
 	animation-timing-function: linear;
 	animation-duration: 7s;
 	animation-delay: 0;
+	animation-fill-mode: forwards;
 }
 .texto__card{
 	margin-left: 50px;
@@ -87,7 +96,7 @@ body{
 .tittle__card{
 	font-family: italic;
 	font-weight: 300;
-	font-size: 3rem;
+	font-size: 2.5rem;
 }
 .contenido__servicios{
 	display: flex;
@@ -108,13 +117,16 @@ body{
 	width: 33.3333%;
 	padding: 20px;
 	box-sizing: border-box;
+	font-size: 1.3rem;
 }
 .item img{
 	display: flex;
 	width: 100%;
 	padding: 20px;
 }
-
+.contenedor__items p{
+	text-align: center;
+}
 .footer__container{
 	width: 100%;
 }
@@ -138,45 +150,7 @@ body{
 	margin-left: 2rem;
 	color: #ffff;
 }
-.contenedor__grid{
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-auto-rows: 1fr 1fr;
-	grid-template-areas: 
-	"titulo imagen";
-	grid-row: center;
-	margin: 100px;
-}
-.titulo__cardgrid{
-	grid-area: titulo;
-}
-.descripcion__cardgrid{
-	grid-area: titulo;
-}
-.imagen__cardgrid{
-	grid-area: imagen;
-}
-.titulo__cardgrid{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-content: center;
-	font-size: 3.5rem;
-}
-.descripcion__cardgrid{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-content: center;
-	font-size: 1.5rem;
-}
-.imagen__cardgrid{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-content: center;
-	max-width: 500px;
-}
+
 .opinion__publico{
 	display: flex;
 	flex-wrap: wrap;
@@ -187,28 +161,286 @@ body{
 	color: #ffff;
 	font-size: 1.5rem;
 }
-.contenedor__emplogos{
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	background-color: grey;
-	padding: 120px;
-}
-.texto__container__form__contacto{
-	text-align: center;
-	padding: 100px;
-}
-.form__container__home p-4{
+.form__container__home p-4 w-50 mx-auto{
 	align-content: center;
 	padding: 100px;
 }
 .texto__container__form__home{
 	text-align: center;
 	padding: 100px;
+}
+.fondo-body-form img{
+	display: flex;
+	position: relative;
+	justify-content: center;
+	width: 100%;
+	margin: auto;
+}
+.contenedor__emplogos{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	background-color: grey;
+	max-width: 100%;
+	box-sizing: border-box;
+	padding: 25px
+}
+.contenedor__emplogos p{
+	color: #ffff;
+	font-size: 1.5rem;
+	margin: 30px;
+}
+.contenedor_emplogos_marcas{
+	display: flex;
+	flex-wrap: wrap;
+	margin: 30px;
+	justify-content: center;
+}
+.logoempresa{
+	display: flex;
+	justify-content: center;
+	margin: 15px;
+}
+.container-info-principal{
+	display: flex;
+	flex-direction: row;
+}
+.infoflex-hijo1{
+	display: inline;
+	flex-direction: center;
+	padding: 130PX;
+	font-size: 1.7rem;
+}
+.infoflex-hijo1 h1{
+	margin-bottom: 20px;
+	font-family: 'Source Serif Pro', serif;
+	font-weight: 600;
+}
+.container_iconos_elegirnos{
+	display: flex;
+	flex-wrap: wrap;
+	margin: 100px;
+	justify-content: center;
+}
+.contenedor_si_elegirnos{
+	display: flex;
+	justify-content: center;
+	max-width: 100%;
+	box-sizing: border-box;
+	padding: 25px
+}
+.titulo_elegirnos{
+	font-size: 2rem;
+	font-weight: 600;
+	margin: 100px;
+}
+.texto-icono-elegirnos{
+	font-size: 1.2rem;
+	margin: 50px;
+}
+.titulo_reconocimiento{
+	display: flex;
+}
+#carouselWithControls{
+	font-size: 1.6rem;
+	background-color: #DED3B7;
+	max-width: 100%;
+	padding: 80px;
+}
+.titulo-opiniones-clientes{
+	font-size: 2rem;
+	font-weight: 600;
+	margin: 60px;
+}
+.seccion1home_container_iconos{
+		font-size: 2rem;
+		font-weight: 600;
+		margin: 100px;
+}
+.container-iconos-home-s1{
+	display: flex;
+    flex-wrap: wrap;
+    margin: 30px;
+}
+.texto-icono-somos{
+	font-size: 1.2rem;
+    margin: 50px;
+}
+.titulo-somosbeduinasi{
+	font-size: 2rem;
+    font-weight: 600;
+    margin: 100px;
+}
+.icono_elegirnos_especialistas img{
+	width: 25%;
+}
+/*FORMUALRIO*/
 
 
+/*PAGINA INFO-BEDUINA*/
+.container_informacion_ambeduina_padre{
+	display: flex;
+	flex-wrap: wrap;
+	position: relative;
+	overflow: hidden;
+	justify-content: center;
+}
+.bloque-imagen-info-beduina{
+	flex-wrap: wrap;
+	justify-content: center;
+	position: relative;
+	width: 100%;
+}
+.bloque-de-texto-info{
+	flex-wrap: wrap;
+	text-align: center;
+	justify-content: center;
+    position: absolute;
+    top: 495px;
+    left: 10px;
+}
+.bloque-de-texto-info h1{
+	font-size: 2.5rem;
+	text-align: center;
+	font-weight: 600;
+	margin: 60px;
+}
+.bloque-de-texto-info p{
+	font-size: 1.3rem;
+}
+#titulo_pagina_galeria{
+	display: flex;
+	flex-wrap: wrap;
+	padding-top: px;
+	justify-content: center;
+}
+#titulo_pagina_galeria h1{
+	font-size: 2.5rem;
+	font-weight: 600;
+	padding: 20px;
+	margin: 60px;
+	text-align: center;
 
-
-
-
-
+}
+.galeria_row{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	margin: 27px
+}
+.column-fotos-galeria{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.column-fotos-galeria img{
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 100%;
+	margin-bottom: 10px;
+	margin-right: 10px;
+}
+.titulo-block-galeria h2{
+	font-size: 1.6rem;
+	text-align: center;
+	margin: 35px;
+}
+.contenedor-pinterest-galeria{
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 100%;
+	background-color: #ABB7B0;
+	padding: 86px;
+	justify-content: center
+}
+h2 a{
+	color: brown;
+}
+/*PÁGINA SERVICIO BEDUINA*/
+.bloque-texto-servicio{
+	align-items: center;
+	text-align: center;
+	margin-top: 30px
+}
+.bloque-texto-servicio h1{
+	font-size: 2.5rem;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 95px;
+    padding: 51px
+}
+.bloque-texto-servicio p{
+	font-size: 1.5rem;
+	text-align: center;
+	justify-content: center;
+	margin: 23px;
+}
+/*CARDS DE SERVICIOS QUE OFRECEMOS*/
+.contenedorcards-pag-servicios{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-bottom: 100px;
+	margin-top: 138px;
+}
+.cardservice-sibeduina{
+	margin: 20px;
+	border-radius: 6px;
+	overflow: hidden;
+	background: #ffff;
+	box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+	cursor: default;
+	transition: all 400ms ease;
+}
+.cardservice-sibeduina:hover{
+	box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+	transform: translateY(-3%);
+}
+.cardservice-image{
+	width:100%;
+	height: 350px;
+}
+.cardservice-sibeduina .textcontentcards-service{
+	padding: 15px;
+	text-align: center;
+}
+.cardservice-sibeduina .textcontentcards-service p{
+	line-height: 1.5;
+	color:#575756
+}
+.cardservice-sibeduina .textcontentcards-service h2{
+	font-weight: 200;
+	margin-bottom: 15px;
+}
+.cardservice-sibeduina .textcontentcards-service a{
+	text-decoration: none;
+	display: inline-block;
+	padding: 10px;
+	margin-top: 10px;
+	color: #575756;
+	border: 1px solid #575756;
+	border-radius: 4px;
+	transition: all 400ms ease;
+}
+.cardservice-sibeduina .textcontentcards-service a:hover{
+	background-color: #575756;
+	color: #bfb8b8;
+}
+/*SECCIÓN PREMIOS BEDUINA*/
+.bloque-texto-servicio col-md-12{
+	background-color: #bfb8b8;
+}
+.contenedor-premios-logos{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: 100px
+}
+.premioss{
+	margin: 60px;
+}
+/*FOOTER REDES SOCIALES*/
+.footer__redes a{
+	text-decoration: none;
+	color: #ffff;
+}
